<resources>
    <string name="app_name">PZ3 Romanik Vladislav 16–8</string>
    <string name="is">=</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="split">/</string>
    <string name="empty">Empty</string>
    <string name="backspace"><![CDATA[<-]]></string>
    <string name="clear_all">Clear All</string>
</resources>
